# amethyst

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
amethyst/: README.md  pyproject.toml
amethyst/src/amethyst/: __init__.py  engine.py  executor.py  hydrator.py  interpreter.py  memory.py  planner.py  syntax.py  types.py
amethyst/tests/: README.md
amethyst/tests/agents/: todoist_agent.py
amethyst/tests/cognitive_engine/: example.amt  example_1.txt  test_cognitive_engine.py
amethyst/tests/tools/: get_weather.py
apps/api/: Dockerfile  app_routes.py  apps_dao.py  main.py  pyproject.toml  resource_routes.py  resources_dao.py
apps/web/: package.json
apps/web/src/: theme.ts
compiler/: .env.example  README.md  pyproject.toml
compiler/src/amethyst_compiler/: __init__.py  amethyst_types.py  executor.py  orchestrator.py  parser.py  runtime.py
compiler/tests/: README.md  a2a_agents.py  hello_world_agent.py  mcp_tools.py  readme_example.amt  run_hello_world_server.py  run_test.py  test_agent.amt  test_cognitive_engine.py  test_readme_syntax.py
compiler/tests/agents/: all_trails_agent.py  hello_world_agent.py  open_table_agent.py
compiler/tests/tools/: __init__.py
copilot/: .workspace
copilot/amethyst/: manifest.yml
copilot/environments/test/: manifest.yml
copilot/pipelines/amethyst-main/: buildspec.yml  manifest.yml
docs/: amethyst-syntax.md
engine/: README.md  pyproject.toml
engine/src/amethyst_engine/: __init__.py  compiler.py  engine.py  executor.py  memory.py  planner.py  syntax.py  types.py
engine/tests/: README.md  unified_server.py
engine/tests/agents/: __init__.py  browser_agent.py
engine/tests/cognitive_engine/: README.md  example.amt  example.txt  test_cognitive_engine.py
engine/tests/tools/: get_weather.py
ide/consumer/: README.md
platform/api/: README.md
(+47 files in other folders)
